New Changes 29/12/22: Update Scoring & Some Template code

--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,9 @@
     "# ensembles\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
+    "# metrics\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "# visualization\n",
     "import seaborn as sns\n",
     "import matplotlib as plt\n",
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +53,7 @@
        "(55692, 27)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,36 +105,38 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 55692 entries, 0 to 55691\n",
-      "Data columns (total 25 columns):\n",
+      "Data columns (total 27 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
-      " 0   gender               55692 non-null  int64  \n",
-      " 1   age                  55692 non-null  int64  \n",
-      " 2   height(cm)           55692 non-null  int64  \n",
-      " 3   weight(kg)           55692 non-null  int64  \n",
-      " 4   waist(cm)            55692 non-null  float64\n",
-      " 5   eyesight(left)       55692 non-null  float64\n",
-      " 6   eyesight(right)      55692 non-null  float64\n",
-      " 7   hearing(left)        55692 non-null  float64\n",
-      " 8   hearing(right)       55692 non-null  float64\n",
-      " 9   systolic             55692 non-null  float64\n",
-      " 10  relaxation           55692 non-null  float64\n",
-      " 11  fasting blood sugar  55692 non-null  float64\n",
-      " 12  Cholesterol          55692 non-null  float64\n",
-      " 13  triglyceride         55692 non-null  float64\n",
-      " 14  HDL                  55692 non-null  float64\n",
-      " 15  LDL                  55692 non-null  float64\n",
-      " 16  hemoglobin           55692 non-null  float64\n",
-      " 17  Urine protein        55692 non-null  float64\n",
-      " 18  serum creatinine     55692 non-null  float64\n",
-      " 19  AST                  55692 non-null  float64\n",
-      " 20  ALT                  55692 non-null  float64\n",
-      " 21  Gtp                  55692 non-null  float64\n",
-      " 22  oral                 55692 non-null  int64  \n",
-      " 23  dental caries        55692 non-null  int64  \n",
-      " 24  tartar               55692 non-null  int64  \n",
-      "dtypes: float64(18), int64(7)\n",
-      "memory usage: 10.6 MB\n"
+      " 0   ID                   55692 non-null  int64  \n",
+      " 1   gender               55692 non-null  object \n",
+      " 2   age                  55692 non-null  int64  \n",
+      " 3   height(cm)           55692 non-null  int64  \n",
+      " 4   weight(kg)           55692 non-null  int64  \n",
+      " 5   waist(cm)            55692 non-null  float64\n",
+      " 6   eyesight(left)       55692 non-null  float64\n",
+      " 7   eyesight(right)      55692 non-null  float64\n",
+      " 8   hearing(left)        55692 non-null  float64\n",
+      " 9   hearing(right)       55692 non-null  float64\n",
+      " 10  systolic             55692 non-null  float64\n",
+      " 11  relaxation           55692 non-null  float64\n",
+      " 12  fasting blood sugar  55692 non-null  float64\n",
+      " 13  Cholesterol          55692 non-null  float64\n",
+      " 14  triglyceride         55692 non-null  float64\n",
+      " 15  HDL                  55692 non-null  float64\n",
+      " 16  LDL                  55692 non-null  float64\n",
+      " 17  hemoglobin           55692 non-null  float64\n",
+      " 18  Urine protein        55692 non-null  float64\n",
+      " 19  serum creatinine     55692 non-null  float64\n",
+      " 20  AST                  55692 non-null  float64\n",
+      " 21  ALT                  55692 non-null  float64\n",
+      " 22  Gtp                  55692 non-null  float64\n",
+      " 23  oral                 55692 non-null  object \n",
+      " 24  dental caries        55692 non-null  int64  \n",
+      " 25  tartar               55692 non-null  object \n",
+      " 26  smoking              55692 non-null  int64  \n",
+      "dtypes: float64(18), int64(6), object(3)\n",
+      "memory usage: 11.5+ MB\n"
      ]
     }
    ],
@@ -141,10 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### Binary Label Encoder\n",
     "dataset['gender'] = np.where(dataset['gender'] == 'F', np.int64(1), np.int64(0))\n",
     "dataset['oral'] = np.where(dataset['oral'] == 'Y', np.int64(1), np.int64(0))\n",
     "dataset['tartar'] = np.where(dataset['tartar'] == 'Y', np.int64(1), np.int64(0))"
@@ -160,10 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### Некоторые переменные для гипертюнинга, по идее можно что-то добавить, но это будет пиздец)))))))) Хотя почему бы и нет...\n",
     "splits = [0.2, 0.3, 0.4]\n",
     "coeffs_svc = [1, 5, 10, 15]\n",
     "knn_n = [5, 10, 15, 20, 25]\n",
@@ -180,10 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### Тут надо подумать о том какие фичи будут участвовать в обучении моделей................\n",
     "# del dataset['ID']\n",
     "# X = dataset\n",
     "# Y = dataset['smoking']\n",
@@ -202,7 +210,7 @@
     "        X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=i)\n",
     "        tune_model = BaggingClassifier(n_estimators=j)\n",
     "        tune_model.fit(X_train, y_train)\n",
-    "        bagging_results.append([i, j, tune_model.score(X_test, y_test)])"
+    "        bagging_results.append([i, j, f1_score(y_true = y_test, y_pred=tune_model.predict(X_test)), accuracy_score(y_true = y_test, y_pred=tune_model.predict(X_test))])"
    ]
   },
   {
@@ -219,7 +227,7 @@
     "                X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=i)\n",
     "                tune_model = DecisionTreeClassifier(criterion=j, splitter=k, max_depth=z)\n",
     "                tune_model.fit(X_train, y_train)\n",
-    "                tree_results.append([i, j, k, z, tune_model.score(X_test, y_test)])"
+    "                tree_results.append([i, j, k, z, f1_score(y_true = y_test, y_pred=tune_model.predict(X_test)), accuracy_score(y_true = y_test, y_pred=tune_model.predict(X_test))])"
    ]
   },
   {
@@ -238,7 +246,7 @@
     "                        X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=i)\n",
     "                        tune_model = KNeighborsClassifier(n_neighbors=j, weights=k, algorithm=p, p=z, metric=m)\n",
     "                        tune_model.fit(X_train, y_train)\n",
-    "                        knn_results.append([i, j, k, p, z, m, tune_model.score(X_test, y_test)])\n",
+    "                        knn_results.append([i, j, k, p, z, m, f1_score(y_true = y_test, y_pred=tune_model.predict(X_test)), accuracy_score(y_true = y_test, y_pred=tune_model.predict(X_test))])\n",
     "        "
    ]
   },
@@ -254,7 +262,7 @@
     "        X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=i)\n",
     "        tune_model = SVC(C= j)\n",
     "        tune_model.fit(X_train, y_train)\n",
-    "        svc_results.append([i, j, tune_model.score(X_test, y_test)])\n",
+    "        svc_results.append([i, j, f1_score(y_true = y_test, y_pred=tune_model.predict(X_test)), accuracy_score(y_true = y_test, y_pred=tune_model.predict(X_test))])\n",
     "        "
    ]
   },
@@ -356,7 +364,7 @@
     "svc_model = SVC(C=10)\n",
     "knn_model = KNeighborsClassifier(n_neighbors=20, weights='distance', algorithm='kd_tree', p=1, metric='minkowski')\n",
     "tree_model = DecisionTreeClassifier(criterion='entropy', splitter='random', max_depth=None)\n",
-    "bagging_model = BaggingClassifier()\n",
+    "bagging_model = BaggingClassifier(n_estimators=15)\n",
     "boost_model = AdaBoostClassifier()"
    ]
   },
@@ -370,10 +378,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = dataset[['eyesight(left)', 'eyesight(right)', 'dental caries', 'tartar']]\n",
+    "y = dataset['smoking']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 measure: 0.2607428987618354\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "#Здесь дальше идёт код лучшей модели, на данный момент лучшая Bagging(Adaboost не трогал, так как хз ч там трогать)\n",
+    "bagging_model = BaggingClassifier(base_estimator=DecisionTreeClassifier(criterion='entropy', splitter='random', max_depth=None),n_estimators=15)\n",
+    "bagging_model.fit(X_train, y_train)\n",
+    "predicted_X = bagging_model.predict(X_test)\n",
+    "score = f1_score(y_true=y_test, y_pred=predicted_X)\n",
+    "print('F1 measure:',score)"
+   ]
   },
   {
    "attachments": {},
@@ -388,7 +422,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##### Здесь сравнение моделей\n"
+   ]
   },
   {
    "attachments": {},
@@ -403,7 +439,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##### Сборка результирующих csv-шников с результатами проверки гипотез из лучшей модели\n",
+    "\n",
+    "\n",
+    "result_df_example.to_csv('hypothesis_name.csv')"
+   ]
   }
  ],
  "metadata": {
