--- a/NoteBook.ipynb
+++ b/NoteBook.ipynb
@@ -637,18 +637,15 @@
    ],
    "source": [
     "\n",
-    "# Create the figure and two subplots\n",
     "fig, axes = plt.subplots(5, 5)\n",
     "fig.set_size_inches(18.5, 40.5)\n",
-    "# Create the boxplot with Seaborn\n",
     "i = 0\n",
     "j = 0\n",
     "for column in list(X.columns):\n",
     "        sns.boxplot(data=X[column], ax=axes[i, j]) \n",
     "        axes[i, j].set_title(column)\n",
     "        j+=1\n",
-    "        if j == 5: j = 0; i+=1\n",
-    "        # axis.set(xticklabels=[], xticks=[], ylabel=column)"
+    "        if j == 5: j = 0; i+=1"
    ]
   },
   {
@@ -1177,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
